hphp/hack/test/typecheck/strict_switch/generic_enum_class.php.exp
ERROR: File "generic_enum_class.php", line 32, characters 3-145:
This `switch` statement is nonexhaustive. At least the following cases are missing: `DerivedEnumClass::LabelIntClass` (Typing[4019])
  File "generic_enum_class.php", line 32, characters 11-12:
  The scrutinee has type `HH\MemberOf<DerivedEnumClass, GenericClass<T>>`.
